kustomize/infrastructure/vader/traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod-cluster-issuer

spec:
  rules:
    - host: traefik.feldman.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard-service
                port:
                  number: 9000
  tls:
    - hosts:
      - traefik.feldman.in
      secretName: traefik-feldman-in-tls
